# Parthenopea

./: .ghci  .gitignore  Aleatory.lhs  Baking.lhs  Bell.lhs  Boot.lhs  BootTest.lhs  Cecil.lhs  Chart.lhs  Covers.lhs  Discrete.lhs  DiscreteTest.lhs  EuterpeaExamples.lhs  FFT.lhs  Fanfare.lhs  Interlude.lhs  LICENSE  LoadEmAll.lhs  MUI.hs  Main.lhs  MidiWidgets.lhs  Modulation.lhs  ModulationTest.lhs  MoreMusic.lhs  Parthenopea.cabal  Parthenopea.lhs  ParthenopeaTest.lhs  Percussion.lhs  Players.lhs  README.md  ReadMe.txt  Rosters.lhs  Runtime.lhs  SSF.lhs  Scoring.lhs  SelfSimilar.lhs  SettingsDefs.lhs  Signals.lhs  Simple.lhs  SmashingTest.lhs  (+15 more)
Bron/app/: Bron.lhs
Bron/eng/: Command.lhs  SFSpec.lhs  ShowResults.lhs  ShredFile.lhs
PCommand/: Main.lhs  PCommand.cabal  cabal.project
PCommand/Tunes/: Cecil.lhs  Covers.lhs  Fanfare.lhs  opus131.lhs  sunPyg.lhs
PCommand/app/: PCommand.lhs  Rosters.lhs
PConsole/: Main.lhs  PConsole.cabal
PConsole/PConsole/: Main.lhs
PConsole/PConsole/Tunes/: Cecil.lhs  Covers.lhs  Fanfare.lhs  Rosters.lhs
PConsole/Tunes/: Cecil.lhs  Covers.lhs  Rosters.lhs  sunPyg.lhs
Parthenopea/: Debug.lhs  Siren.lhs
Parthenopea/Music/: Baking.lhs  Passage.lhs  PassageTest.lhs  Percussion.lhs  Rosters.lhs  Siren.lhs
Parthenopea/Repro/: Chart.lhs  Discrete.lhs  DiscreteTest.lhs  Emission.lhs  Envelopes.lhs  EnvelopesTest.lhs  Modulation.lhs  ModulationTest.lhs  Render2.lhs  Smashing.lhs  SmashingTest.lhs  Synthesizer.lhs  SynthesizerTest.lhs  Zone.lhs  syntoolkit.lhs
Parthenopea/SoundFont/: Boot.lhs  BootTest.lhs  Command.lhs  Directives.lhs  PassageReport.lhs  RangesReport.lhs  Runtime.lhs  SFSpec.lhs  ScanReport.lhs  Scoring.lhs  TournamentReport.lhs  Utility.lhs
Parthenopea/Tunes/: Cecil.lhs  Covers.lhs  Fanfare.lhs  sunPyg.lhs
Sample Reports/: README.md  Ranges.report  Scan.report  Tournament.report
