name:           Parthenopea
version:        1.0.0
cabal-version:  >= 1.8
license:
category:       Sound
stability:      experimental
build-type:     Simple
maintainer:     William Clements <william@clementsassociates.net>
synopsis:       William Clements Music
description:    William Clements Music using Euterpea library
extra-source-files:
        ReadMe.txt

Library
  hs-source-dirs: .
  ghc-options: -O2 -funbox-strict-fields -fexcess-precision
  extensions: CPP
  exposed-modules:
        Aleatory,
        Baking,
        Cecil,
        Chart,
        Covers,
        Fanfare,
        Illiterate,
        Modulation,
        ModulationTest,
        Parthenopea,
        Percussion,
        Players,
        Rosters,
        SoundFont,
        SunPyg,
        Synthesizer,
        SynthesizerTest,
        Syntoolkit
  other-modules:
  build-depends:
        array                      >= 0.5.0.0            && <= 0.6,
        arrows                     >= 0.4                && < 0.5,
        base                       >= 4                  && < 5,
        bytestring                 >= 0.12.1.0,
        Chart                      >= 1.9.4              && <= 2.0,
        Chart-diagrams             >= 1.9.4              && < 2.0,
        colour                     >= 2.3.6              && < 3.0,
        containers                 >= 0.5.5.1            && < 0.7,
        data-default-class         >= 0.1.2.0            && < 2.0,
        deepseq                    >= 1.3.0.2            && <= 1.5,
        Euterpea                   >= 2.0.8,
        filepattern                >= 0.1.3,
        fuzzyfind                  >= 3.0.1,
        HCodecs                    >= 0.5.1              && <= 0.6,
        HSoM                       >= 1.0.0              && < 2.0,
        lens                       >= 5.2.1              && < 6.0,
        monadplus                  >= 1.4.3              && < 2.0,
        mtl                        >= 2.2.0              && < 3.0,
        pure-fft                   >= 0.2.0              && < 1.0,
        random                     >= 1.0.1.1,
        stm                        >= 2.4                && <2.6,
        time                       >= 1.11.1.1           && < 2.0,
        UISF                       >= 0.4.0.0,
        
        ghc-prim