cabal-version:      3.0
name:               Parthenopea
version:            0.0.1.5
license:            Apache-2.0
license-file:       LICENSE
copyright:          William Clements (c) 2022
category:           Sound
author:             William Clements
maintainer:         william@clementsassociates.net
homepage:           https://github.com/WilliamClements/Parthenopea#readme
bug-reports:        https://github.com/WilliamClements/Parthenopea/issues
synopsis:           music composition and orchestration tool
description:
  Extends Euterpea2 embedded algorithmic composition language. Provides offline (SoundFont-based) synthesis.

build-type:         Simple

extra-doc-files:
  CHANGELOG.md
  README.md
  VideoScript.md

source-repository head
  type: git
  location: https://github.com/WilliamClements/Parthenopea

common warnings
    ghc-options:
      -O2
      -funbox-strict-fields
      -fexcess-precision
      -Wall
      -Wno-x-partial

library
    import:             warnings
    default-language:   GHC2021
    hs-source-dirs:     .
    exposed-modules:    Parthenopea.Debug, Parthenopea.Music.Baking, Parthenopea.Music.Passage,
                        Parthenopea.Music.Percussion, Parthenopea.Music.Siren, Parthenopea.Repro.Discrete, 
                        Parthenopea.SoundFont.Boot, Parthenopea.SoundFont.Command, Parthenopea.SoundFont.Directives,
                        Parthenopea.SoundFont.Runtime, Parthenopea.SoundFont.SFSpec, Parthenopea.SoundFont.Utility
    other-modules:      Parthenopea.Music.PassageTest, Parthenopea.Repro.Chart, Parthenopea.Repro.DiscreteTest,
                        Parthenopea.Repro.Emission, Parthenopea.Repro.Envelopes, Parthenopea.Repro.EnvelopesTest,
                        Parthenopea.Repro.Modulation, Parthenopea.Repro.ModulationTest,
                        Parthenopea.Repro.Smashing, Parthenopea.Repro.SmashingTest,
                        Parthenopea.Repro.Synthesizer, Parthenopea.Repro.SynthesizerTest,
                        Parthenopea.SoundFont.BootTest, Parthenopea.SoundFont.RangesReport,
                        Parthenopea.SoundFont.ScanReport, Parthenopea.SoundFont.Scoring,
                        Parthenopea.SoundFont.TournamentReport
    build-depends:
        array                      >= 0.5.8.0,
        arrows                     >= 0.4,
        base                       >= 4.15,
        bytestring                 >= 0.12.2.0,
        Chart                      >= 1.9.5,
        Chart-diagrams             >= 1.9.5.1,
        chart-svg                  == 0.8.0.3,
        containers                 >= 0.6,
        diagrams-lib               >= 1.5.1,
        data-default-class         >= 0.2.0.0,
        deepseq                    >= 1.5.1.0,
        Euterpea                   >= 2.0.7,
        filepattern                >= 0.1.3,
        fuzzyfind                  >= 3.0.2,
        HCodecs                    >= 0.5.2,
        lens                       >= 5.3.5,
        MemoTrie                   >= 0.6.11,
        monadplus                  >= 1.4.3,
        prettychart                == 0.3.0.1,
        pure-fft                   >= 0.2.0,
        random                     >= 1.2.1.3,
        time                       >= 1.12.2,
        transformers               >= 0.6.1.0,
        vector                     >= 0.13.2.0,
        
        ghc-prim

executable PCommand
    import:             warnings
    default-language:   GHC2021
    main-is:            app/PCommand.lhs
    hs-source-dirs:     PCommand
    other-modules:      App.Rosters, Tunes.Cecil, Tunes.Covers, Tunes.Fanfare,
                        Tunes.Opus131, Tunes.SunPyg
    build-depends:
        base                       >= 4.15,
        containers                 >= 0.6,
        Euterpea                   >= 2.0.8,
        Parthenopea,
        
        ghc-prim
