cabal-version:      3.0
--
-- The name of the package.
name:               PConsole

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.1

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- The license under which the package is released.
license:            Apache-2.0

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             William Clements

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         william@clementsassociates.net

-- A copyright notice.
-- copyright:
category:           Sound
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-x-partial

executable PConsole
    -- Import common warning flags.
    import:         warnings

    -- .hs or .lhs file containing the Main module.
    main-is:        Main.lhs
    
    -- Modules included in this executable, other than Main.
    other-modules:  Tunes.Cecil, Tunes.Covers,
                    Tunes.Fanfare, Tunes.Rosters, Tunes.SunPyg

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base         >= 4,
                      containers   >= 0.5.5.1,
                      Euterpea     >= 2.0.8,
                      Parthenopea  >= 0.1.0.1

    -- Directories containing source files.
    hs-source-dirs:   .

    -- Base language which the package is written in.
    default-language: GHC2021
